syntax="proto3";
option go_package="/.";
package pb;

message CreatRole{
	string name=1;
	string password=2;
}

message Login{
	string name=1;
	string password=2;
}
message LoginInfo{
    uint64 id=1;
	string name=2;
	string text=3;
}

message Heartbeat{
}

message Skill{
	uint64 targetID=1;
	uint64 skillID=2;
}

message ErrorInfo{
    uint32 code=1;
    string msg=2;
}

message EnterRoom{
    uint32 roomID=1; //房间ID，为0时代表快速进入
}

message GameStart{
    uint32 seat=1; //位置
    string role=2; //客户端接收，其他人位置
    string npc=3;
}

// 通知客户端，到你的轮次了
message GameTurn{
}

message LeaveGame{
}

message FollowAction{
	string role=1; //客户端接收，其他人动作
	uint32 action=2; //跟牌；弃牌；加注
	uint64 count=3; //加注数量
}

message GiveCards{
	uint32 action=1;// 手牌；公共牌
	uint32 first=2; //如果是手牌，代表第一张；如果是公共牌，代表第几张
	uint32 second=3; //如果是手牌，代表第二张；如果是公共牌，就是这张牌
	string role=4; //客户端接收，结算时，其他人底牌
}

message SettleResult{
	uint64 golds=1;// 0则为输；其他数字为赢得金币（可能少于前面投入）
	uint32 cardModel=2; //牌型：皇家同花顺、同花顺、四条、葫芦、同花、顺子、三条、两对、一对、高牌
	repeated uint32 cards=3; //牌组合，5张牌
	string role=4; //客户端接收，结算时，其他人
}